# packet-parser

./: README.md  meson.build
include/: listener.h  main.h  parser.h  util.h
include/layer2/: eth.h  layer2.h
include/layer3/: arp.h  ipv4.h  ipv6.h  layer3.h
include/layer4/: icmp.h  layer4.h  tcp.h  udp.h
src/: listener.c  main.c  parser.c  util.c
test/: ethernet.py  ipv4.py  ipv6.py  requirements.txt
